istio-config/app-double-version.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-devops-service
spec:
  selector:
    app: project-devops
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
      
---

apiVersion: apps/v1 
kind: Deployment
metadata:
  name: project-devops-deployment
  labels:
    app: project-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-devops
  template:
    metadata:
      labels:
        app: project-devops
        version: v1
    spec:
      containers:
        - name: project-devops
          image: redseahorse/projet-devops-test
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: project-devops-deployment
  labels:
    app: project-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-devops
  template:
    metadata:
      labels:
        app: project-devops
        version: v2
    spec:
      containers:
        - name: project-devops
          image: redseahorse/projet-devops-test
          ports:
            - containerPort: 3000
