istio-config/app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: project-devops-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 3000
      name: tcp
      protocol: TCP
    hosts:
    - "*"
