istio-config/app-virtualService-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project-devops
spec:
  hosts:
  - "*"
  gateways:
  - project-devops-gateway
  tcp:
  - match:
    - port: 3000
    route:
    - destination:
        host: project-devops-app
        subset: v2
  - route:
    - destination:
        host: project-devops-app
        subset: v1
