istio-config/app-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project-devops
spec:
  hosts:
  - "*"
  gateways:
  - project-devops-gateway
  tcp:
  - match:
    - port: 3000
    route:
    - destination:
        host: 3000
        port: 30000
          number: 3000
