istio-config/virtual-service-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project-devops
spec:
  hosts:
    - project-devops-app
  http:
  - route:
    - destination:
        host: project-devops-app
        subset: v3
